[build-system]
requires = ["setuptools>=65.5.1", "wheel>=0.38.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meal-planner"
version = "0.1.0"
description = "AI-powered meal planning application"
requires-python = ">=3.10,<3.13"
dependencies = [
    "Flask==2.0.1",
    "gunicorn==20.1.0",
    "google-generativeai==0.3.2",
    "python-dotenv==0.19.0",
    "requests==2.31.0",
    "beautifulsoup4==4.9.3",
    "crewai==0.11.0",
    "tiktoken==0.8.0",
    "numpy==1.24.3"
] 